--- a/composer.json
+++ b/composer.json
@@ -99,7 +99,14 @@
         ],
         "csfix": "tools/php-cs-fixer/vendor/bin/php-cs-fixer fix src",
         "phpcs": "tools/php-codesniffer/vendor/bin/phpcs --standard=PSR12 src",
-        "phpcbf": "tools/php-codesniffer/vendor/bin/phpcbf --standard=PSR12 src"
+        "phpcbf": "tools/php-codesniffer/vendor/bin/phpcbf --standard=PSR12 src",
+        "phpstan": "tools/phpstan/vendor/bin/phpstan analyse -l 5 src || true",
+        "phpcpd": "tools/phpcpd/vendor/bin/phpcpd src || true",
+        "lint": [
+            "@phpcpd",
+            "@phpstan",
+            "@csfix"
+        ]
     },
     "conflict": {
         "symfony/symfony": "*"
