Linting and added scrutinizer

--- a/composer.json
+++ b/composer.json
@@ -105,6 +105,7 @@
         "phpcbf": "tools/php-codesniffer/vendor/bin/phpcbf --standard=PSR12 src",
         "phpstan": "tools/phpstan/vendor/bin/phpstan analyse -l 5 src || true",
         "phpcpd": "tools/phpcpd/vendor/bin/phpcpd src || true",
+        "phpmetrics": "tools/phpmetrics/vendor/bin/phpmetrics --config=phpmetrics.json",
         "lint": [
             "@phpcpd",
             "@phpstan",
