--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -25,8 +25,14 @@
 
     <coverage processUncoveredFiles="true">
         <include>
-            <directory suffix=".php">src/cards</directory>
+            <directory suffix=".php">src</directory>
         </include>
+        <exclude>
+            <directory suffix=".php">src/controller</directory>
+            <directory suffix=".php">src/Entity</directory>
+            <directory suffix=".php">src/Repository</directory>
+            <directory suffix=".php">src/Dice</directory>
+        </exclude>
         <report>
             <clover outputFile="build/coverage.clover"/>
             <html outputDirectory="build/coverage" lowUpperBound="35" highLowerBound="70"/>
